# allotaxonometer-core

./: Cargo.toml  LICENSE
.github/workflows/: publish.yml
crates/allotax-core/: Cargo.toml  README.md
crates/allotax-core/benches/: pipeline.rs
crates/allotax-core/src/: balance.rs  combine.rs  diamond.rs  helpers.rs  lib.rs  rtd.rs  types.rs  wordshift.rs
crates/allotax-py/: Cargo.toml  README.md  pyproject.toml
crates/allotax-py/src/: lib.rs
crates/allotax-wasm/: Cargo.toml
crates/allotax-wasm/src/: lib.rs
