[package]
name = "allotax-core"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan St-Onge <jonathanstonge7@gmail.com>"]
description = "Core allotaxonometer computation: rank-turbulence divergence and related metrics"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false
