[package]
name = "allotax-py"
version = "0.2.0"
edition = "2021"
authors = ["Jonathan St-Onge <jonathanstonge7@gmail.com>"]
description = "Python bindings for allotax-core via PyO3"

[lib]
name = "allotax"
crate-type = ["cdylib"]

[dependencies]
allotax-core = "0.2.0"
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
