[package]
name = "allotax-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan St-Onge <jonathanstonge7@gmail.com>"]
description = "WASM bindings for allotax-core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
allotax-core = { path = "../allotax-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

